examples/datalog/18_advanced_patterns/14_path_counting.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_path_count
Knowledge graph 'test_path_count' created.
Switched to knowledge graph: test_path_count
> .kg use test_path_count
Switched to knowledge graph: test_path_count
> +edge[(1, 2), (1, 3), (2, 4), (3, 4)].
Inserted 4 fact(s) into 'edge'.
> path_count(X, Y, 1) :- edge(X, Y).
4 rows:
  (1, 2, 1)
  (1, 3, 1)
  (2, 4, 1)
  (3, 4, 1)
(session: 1 rule(s))
> path2(X, Z, <COUNT:M>) :- edge(X, Y), edge(Y, Z).
Script error: Parse error: Unknown aggregate function: 
